13.11. Desfazendo o teste da propriedade nomeCliente em pedido e mapeando novos campos para ordenação